OW/force-app/main/default/objects/Activity/fields/OW_Functional_Area__c.field-meta.xml
<CustomField>
    <fullName>OW_Functional_Area__c</fullName>
    <label>Functional Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic Rationale</fullName>
            </value>
            <value>
                <fullName>Product Proposition</fullName>
            </value>
            <value>
                <fullName>Pricing &amp; Yield</fullName>
            </value>
            <value>
                <fullName>Systems Engineering</fullName>
            </value>
            <value>
                <fullName>Regulatory</fullName>
            </value>
            <value>
                <fullName>SNP - Satellite Network Provider</fullName>
            </value>
            <value>
                <fullName>UT - User Terminal</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>