OW/force-app/main/default/objects/Activity/fields/OW_Governance__c.field-meta.xml
<CustomField>
    <fullName>OW_Governance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Governance</label>
    <type>Checkbox</type>
</CustomField>