OW/force-app/main/default/objects/Activity/fields/OW_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>OW_Next_Steps__c</fullName>
    <label>Next Steps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>