OW/force-app/main/default/objects/Activity/fields/OW_Reason_for_Flag__c.field-meta.xml
<CustomField>
    <fullName>OW_Reason_for_Flag__c</fullName>
    <label>Reason for Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>