OW/force-app/main/default/objects/Activity/fields/OW_SignOffDate__c.field-meta.xml
<CustomField>
    <fullName>OW_SignOffDate__c</fullName>
    <label>Sign-Off Date</label>
    <type>Date</type>
</CustomField>